--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -7,3 +7,13 @@ services:
       - 6379:6379
     #expose: #for windows
     # - 6379
+    volumes:
+      - /tmp/redis_data:/data
+#  mysql:
+#    image: mysql:5.7
+#    command: --default-authentication-plugin=mysql_native_password
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: example
+#    volumes:
+#      - /tmp/mysql_data:/var/lib/mysql
